# visual-memory

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
documents/: embodied_visual_memory_project_teaching_guide.docx  step_1_visual_input_pipeline_simple_explanation.docx  step_1_visual_input_pipeline_technicalities_and_math.docx  step_2_object_detection_and_basic_memory_simple_explanation.docx  step_2_object_detection_and_basic_memory_technicalities_and_math.docx  step_3_object_identity_tracking_simple_explanation.docx  step_3_object_identity_tracking_technicalities_and_math.docx  step_4_queryable_visual_memory_simple_explanation.docx  step_4_queryable_visual_memory_technicalities_and_math.docx  step_5_change_detection_between_runs_simple_explanation.docx  step_5_change_detection_between_runs_technicalities_and_math.docx  step_6_one_command_webcam_scan_simple_explanation.docx  step_6_one_command_webcam_scan_technicalities_and_math.docx  step_7_recorded_video_scan_simple_explanation.docx  step_7_recorded_video_scan_technicalities_and_math.docx  step_8_html_visual_report_simple_explanation.docx  step_8_html_visual_report_technicalities_and_math.docx
src/evm/: __init__.py  change.py  cli.py  detection.py  memory.py  observation.py  paths.py  query.py  report.py  sources.py  storage.py  tracking.py  web.py
tools/doc_build/: build_project_teaching_guide.py  build_step1_docs.py  build_step2_docs.py  build_step3_docs.py  build_step4_docs.py  build_step5_docs.py  build_step6_docs.py  build_step7_docs.py  build_step8_docs.py
