[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "embodied-visual-memory"
version = "0.1.0"
description = "Visual input pipeline for embodied visual memory experiments"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "ultralytics>=8.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.12",
]

[project.scripts]
evm = "evm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
